--- a/src/locales/uk/translations.json
+++ b/src/locales/uk/translations.json
@@ -1,3 +1,13 @@
 {
-  "features": "Features uk"
+  "title": "Додавання доменів та DNS-записів в CloudFlare",
+  "emailRe": "Будь ласка, введіть вашу пошту CloudFlare",
+  "apiKeyReq": "Глобальний ключ API є обов'язковим полем",
+  "apiKeyMust": "Глобальний ключ API повинен бути не довше 500 символів",
+  "apiKeyMin": "Глобальний ключ API повинен містити принаймні 1 символ",
+  "domainReq": "Домен є обов'язковим полем",
+  "validDomain": "Будь ласка, введіть дійсні домени, кожен з нового рядка",
+  "IPAddresReq": "Будь ласка, введіть IP-адресу сервера",
+  "validIp": "Будь ласка, введіть дійсну IP-адресу сервера",
+  "features": "Функції",
+  "pricing": "Ціноутворення"
 }
