--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -13,15 +13,15 @@
   "login": "Log In",
   "getStarted": "Get Started",
   "addDomainText": "Adding domains and DNS records in CloudFlare",
-  "youremail": "Your Email",
+  "youremail": "Your CloudFlare Email",
   "exampleEmail": "e.g. mail@example.com",
-  "apiKey": "Your API Key",
+  "apiKey": "Your Global API Key",
   "exampleKey": "Example: g789h67deep45a5544b7b0cupra4678987n22",
   "domain": "Domains",
   "exampleDomain": "Example: \ncloudflare.com\nfacebook.com",
   "eachDomain": " Write each domain on a new line",
   "IP": "IP",
-  "domainIP": "Domains: 88.77.55.86",
+  "domainIP": "Example: 88.77.55.86",
   "deleteOldDns": "Delete Old DNS Records",
   "proxied": "Proxied",
   "clearcached": "Clear Cache",
