--- a/public/locales/ru/translations.json
+++ b/public/locales/ru/translations.json
@@ -8,7 +8,7 @@
   "validDomain": "Пожалуйста, укажите действительные домены, каждый с новой строки",
   "IPAddresReq": "Пожалуйста, введите IP-адрес сервера",
   "validIp": "Пожалуйста, введите действительный IP-адрес сервера",
-  "features": "Функции",
+  "feature": "Функции",
   "pricing": "Ценообразование",
   "login": "Войти",
   "getStarted": "Начать",
