--- a/public/locales/uk/translations.json
+++ b/public/locales/uk/translations.json
@@ -8,7 +8,7 @@
   "validDomain": "Будь ласка, введіть дійсні домени, кожен з нового рядка",
   "IPAddresReq": "Будь ласка, введіть IP-адресу сервера",
   "validIp": "Будь ласка, введіть дійсну IP-адресу сервера",
-  "features": "Функції",
+  "feature": "Функції",
   "pricing": "Ціноутворення",
   "login": "Увійти",
   "getStarted": "Почати",
